Do header styling Add logo

--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,44 @@ header, footer {
     width: 100%;
     background-color: grey;
 }
-header{
+header {
+    display: flex;
+    flex-direction: column;
     height: 250px;
     margin-top: 0;
+}
+.title_container {
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.title_container figure, .title_container a {
+    padding: 2% 5% 1% 5%;
+}
+#logo {
+    width: 70%;
+    margin-top: -2%;
+    margin-left: -5%;
+}
+header nav ul {
+    padding-inline-start: 0;
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+}
+header nav ul li {
+    display: inline;
+    margin-left: 2%;
+    margin-right: 2%;
+    font-size: 2em;
+    
+}
+header nav ul li a {    
+    text-decoration: none;
+    color: white;
 }
 footer {
     display: flex;
