Add responsiveness to header and footer

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 html, body {
     height: 100%;
-    width: auto;
+    width: auto;    
     background-color: black;
 }
 .page_content {
+    min-width: 420px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -15,7 +16,7 @@ html, body {
     background-color: white;  
 }
 .main_content {
-    padding: 5% 0;
+    padding: 5% 5%;
 }
 header, footer {
     display: flex;
@@ -41,12 +42,12 @@ header {
 }
 #logo {
     width: 70%;
+    min-width: 280px;
     margin-top: -2%;
     margin-left: -5%;
 }
 header nav ul {
     padding-inline-start: 0;
-
     width: 100%;
     display: flex;
     justify-content: center;
@@ -93,4 +94,32 @@ form label, input {
 #links a {
     text-decoration: none;
     color: black;
+}
+@media screen and (max-width: 1200px) {
+    .page_content {
+        width: 90%;
+    }
+    #logout {
+        width: 100%;
+        min-width: 45px;
+    }
+}
+@media screen and (max-width: 800px) {
+    header nav {
+        text-align: center;
+    }
+    header nav ul {
+        flex-direction: column;
+    }
+    .page_content {
+        justify-content: space-evenly;
+    }
+    #logo {
+        margin-left: -8%;
+    }
+}
+@media screen and (max-width: 600px) {
+    #logout {
+        margin-left: -150%;
+    }
 }
