--- a/css/main.css
+++ b/css/main.css
@@ -94,3 +94,22 @@ form label, input {
     text-decoration: none;
     color: black;
 }
+
+#wallet_icon {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    text-align: center;
+    color: black;
+}
+
+#wallet_img {
+    width: 100%;
+}
+
+#amount_of_coolcoins {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
