--- a/css/main.css
+++ b/css/main.css
@@ -96,16 +96,17 @@ form label, input {
     color: black;
 }
 
-#wallet_icon {
-    width: 50px;
-    height: 50px;
+#wallet_icon, #backpack_icon {
+    width: 20%;
+    height: 20%;
     position: relative;
     text-align: center;
     color: black;
 }
 
-#wallet_img {
-    width: 100%;
+#wallet_img, #backpack_img {
+    width: 50px;
+    height: 50px;
 }
 
 #amount_of_coolcoins {
