--- a/css/main.css
+++ b/css/main.css
@@ -96,17 +96,21 @@ form label, input {
     color: black;
 }
 
-#wallet_icon, #backpack_icon {
-    width: 20%;
-    height: 20%;
+#header_icons {
+    width: 30%;
+    float: right;
+}
+
+#header_icon {
+    width: 20px;
     position: relative;
     text-align: center;
     color: black;
 }
 
-#wallet_img, #backpack_img {
-    width: 50px;
-    height: 50px;
+#icon_img {
+    width: 30px;
+    height: 30px;
 }
 
 #amount_of_coolcoins {
