--- a/css/cards.css
+++ b/css/cards.css
@@ -81,6 +81,18 @@
     text-shadow: 0 1px 1px rgb(138, 255, 5);
 }
 
+.magic{
+    position:absolute;
+    bottom:20px;
+    right: 0px;
+    color: rgb(211, 211, 214);
+    font-size: 13px;
+    font-weight: bold;
+    transform: rotate(-45deg);
+    text-shadow: 0 2px 2px rgba(12, 1, 1, 1);
+    text-shadow: 0 1px 1px rgb(138, 255, 5);
+}
+
 .card_artefacts {
     background-image: linear-gradient(rgba(41, 41, 8, 0.823), rgba(100, 100, 0, 0.652));
     width: 200px;
@@ -156,6 +168,20 @@
     text-align: center;
     color: rgb(211, 211, 214);  
 }
+
+.editcardbutton {
+    position:absolute;
+    bottom:120px;
+    right:55px;
+    background:rgb(57, 87, 57);
+    width:90px;
+    height:20px;
+    border: 1px solid rgb(238, 241, 233);
+    border-radius: 5px;
+    text-align: center;
+    color: rgb(211, 211, 214);  
+}
+
 
 .valuecoins {
     position:absolute;
