--- a/css/mentors.css
+++ b/css/mentors.css
@@ -1,34 +1,34 @@
 #mentors {
+    width: 500px;
     list-style-type: none;    
     padding: 4% 0 2% 0;
-}
-#mentors li {
-    list-style-position:inside;
-    border-bottom: 1px solid grey;
 }
 #list_header {
     background-color: grey;
     color: white;
 }
+#mentors li {
+    border-bottom: 1px solid grey;
+}
 #mentors li span {
     display: inline-block;
-    padding-left: 1%;
+    padding: 1% 0 1% 1%;
 }
-.mentor_name_label, .mentor_class_label, .mentor_e_mail_label, .edit_label {
+.mentor_name_label, .mentor_class_label, .mentor_e_mail_label {
     padding-top: 1%;
 }
+.mentor_id_label, .mentor_id {
+    width: 15px;
+}
 .mentor_name, .mentor_name_label {
-    width: 200px;    
+    width: 180px;    
 }
 .mentor_class, .mentor_class_label {
     width: 100px;
-}
+}    /*
 .mentor_e_mail, .mentor_e_mail_label {
-    width: 231px;
-}
-.edit_label, .edit_mentor {
-    width: 65px;
-}
+    width: 200px;
+} */
 #shade_background {
     display: none;
     position: absolute;
