--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 html, body {
     height: 100%;
-    width: auto;    
-    background-color: black;
+    width: auto;
 }
 body {
     background-image: url("../img/main_background.png");
+    background-attachment: fixed;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Charmonman', cursive;
