--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
     background-attachment: fixed;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Charmonman', cursive;
+    font-family: 'MedievalSharp', cursive;
     font-weight: bold;
 }
 a, span, li, p {
@@ -25,6 +25,7 @@ a, span, li, p {
     margin: 0 auto 0 auto;
     background-color: white;
     filter: drop-shadow(0 0 2rem black);
+    background-image: url("../img/page_content_background.jpg");
 }
 .main_content {
     padding: 5% 5%;
@@ -74,7 +75,7 @@ header nav ul li {
 header nav ul li a {    
     text-decoration: none;
     color: white;
-    font-family: 'Charmonman', cursive;
+    font-family: 'MedievalSharp', cursive;
 }
 header nav ul li a:hover {    
     text-decoration: none;
