--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -22,12 +22,12 @@
 
 
         <div class="login_content">
-            <form name="login_form" id="login_form">
+            <form method="post" name="login_form" id="login_form">
                 <label for="login">Login:</label>
                 <input type="text" name="login" id="login" size="25" required>
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" size="25" required>
-                <input type="button" value="login" id="submit_button" onclick="logIn()">
+                <input type="submit" value="login" id="submit_button" onclick="logIn()">
             </form>
         </div>
 
