--- a/src/main/resources/templates/student/store.twig
+++ b/src/main/resources/templates/student/store.twig
@@ -23,25 +23,25 @@
 
                 <span id="header_icons">
 
-                    <figure id="icon">
+                    <figure class="icon">
                         <a href="inventory.html">
                             <img src="../img/backpack.png" class="icon_img" alt="backpack">
                         </a>
                     </figure>
 
-                    <figure id="icon">
+                    <figure class="icon">
                         <a href="wallet.html">
                             <img src="../img/wallet.png" class="icon_img" alt="wallet">
                             <div id="amount_of_coolcoins">100</div>
                         </a>
                     </figure>
 
-                    <figure id="icon">
+                    <figure class="icon">
                         <img src="../img/star-icon.png" class="icon_img" alt="exp_icon">
                         <div id="exp_level">5</div>
                     </figure>
 
-                    <figure id="icon">
+                    <figure class="icon">
                         <a href="../login.html"><img src="../img/logout.png" class="icon_img" alt="logout"></a>
                     </figure>
 
