--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/login.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/login.css">
+    <script src="/static/js/script.js"></script>
 </head>
 
 <body>
     <div class="page_content">
 
         <figure>
-            <img id="logo" src="img/logo.png" alt="logo">
+            <img id="logo" src="/static/img/logo.png" alt="logo">
         </figure>
 
 
