--- a/src/main/resources/templates/student/artifacts.html
+++ b/src/main/resources/templates/student/artifacts.html
@@ -31,7 +31,7 @@
                     <figure class="icon">
                         <a href="wallet.html">
                             <img src="../img/wallet.png" class="icon_img" alt="wallet">
-                            <div id="amount_of_coolcoins">100</div>
+                            <div id="amount_of_coolcoins"> {{% coolcoins_amount %}} </div>
                         </a>
                     </figure>
 
