--- a/src/main/resources/templates/student/crowdfunding.html
+++ b/src/main/resources/templates/student/crowdfunding.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Crowfunding</title>
+    <title>Crowdfunding</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
@@ -31,7 +31,7 @@
                     <figure class="icon">
                         <a href="wallet.html">
                             <img src="../img/wallet.png" class="icon_img" alt="wallet">
-                            <div id="amount_of_coolcoins">100</div>
+                            <div id="amount_of_coolcoins"> {{% coolcoins_amount %}} </div>
                         </a>
                     </figure>
 
