Implement basic CreepyGuyClassesController

--- a/src/main/resources/templates/creepyguy/classes.twig
+++ b/src/main/resources/templates/creepyguy/classes.twig
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/main.css">
 </head>
 
 <body>
@@ -16,20 +16,20 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img id="logo" src="../img/logo.png" alt="logo">
+                    <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a href="../login.html"><img id="logout" src="../img/logout.png" alt="logout"></a>
+                <a href="/static/login.html"><img id="logout" src="/static/img/logout.png" alt="logout"></a>
             </div>
             <nav>
                 <ul>
                     <li>
-                        <a href="../creepyguy/classes.html">CLASSES MANAGEMENT</a>
+                        <a href="/static/creepyguy/classes.html">CLASSES MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/mentors.html">MENTORS MANAGEMENT</a>
+                        <a href="/static/creepyguy/mentors.html">MENTORS MANAGEMENT</a>
                     </li>
                     <li>
-                        <a href="../creepyguy/levels.html">LEVELS MANAGEMENT</a>
+                        <a href="/static/creepyguy/levels.html">LEVELS MANAGEMENT</a>
                     </li>
                 </ul>
             </nav>
@@ -94,7 +94,7 @@
 
 
 </body>
-<script src="../js/script.js"></script>
-<script src="../js/classes.js"></script>
+<script src="/static/js/script.js"></script>
+<script src="/static/js/classes.js"></script>
 
 </html>
