--- a/src/main/resources/templates/student/crowdfunding.twig
+++ b/src/main/resources/templates/student/crowdfunding.twig
@@ -66,7 +66,7 @@
             <h1>Crowdfunding</h1>
             <p>Together with your classmates you can buy some artifacts.</p>
 
-            {{% for croudfund_item in croudfund_items %}}
+            {% for croudfund_item in croudfund_items %}
 
             <div class="crowdfund_item">
                 <div class="card">
@@ -88,7 +88,7 @@
 
             </div>
 
-            {{% endfor %}}
+            {% endfor %}
 
         </div>
 
