--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -27,7 +27,7 @@
                 <input type="text" name="login" id="login" size="25" required>
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" size="25" required>
-                <input type="submit" value="login" id="submit_button" onclick="logIn()">
+                <input type="submit" value="login" id="submit_button">
             </form>
         </div>
 
