--- a/src/main/resources/templates/mentor/codecoolers.twig
+++ b/src/main/resources/templates/mentor/codecoolers.twig
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/codecoolers.css">
+    <link rel="stylesheet" href="/static/css/reset.css">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <link rel="stylesheet" href="/static/css/codecoolers.css">
 
 </head>
 
@@ -18,21 +18,21 @@
         <header>
             <div class="title_container">
                 <figure>
-                    <img id="logo" src="../img/logo.png" alt="logo">
+                    <img id="logo" src="/static/img/logo.png" alt="logo">
                 </figure>
-                <a id="logout" href="../login.html"><img src="../img/logout.png" alt="logout"></a>
+                <a id="logout" href="/login"><img src="/static/img/logout.png" alt="logout"></a>
             </div>
 
             <nav>
                 <ul>
                     <li>
-                        <a href="codecoolers.html">CODECOOLERS</a>
+                        <a href="/codecoolers">CODECOOLERS</a>
                     </li>
                     <li>
-                        <a href="quests.html">QUEST</a>
+                        <a href="/quests">QUEST</a>
                     </li>
                     <li>
-                        <a href="artifacts.html">ARTIFACTS</a>
+                        <a href="/artifacts">ARTIFACTS</a>
                     </li>
                 </ul>
             </nav>
@@ -47,25 +47,19 @@
                     <span class="student_name_label">NAME</span>
                     <span class="student_wallet_label">WALLET</span>
                 </li>
-                <li>
-                    <span class="student_id"></span>
-                    <span class="student_name">Piotr Tomaszewski</span>
-                    <span class="student_wallet">100</span>
 
-                </li>
-                <li>
-                    <span class="student_id"></span>
-                    <span class="student_name">Agnieszka Koszany</span>
-                    <span class="student_wallet">100</span>
+            {% for codecooler in codecoolers %}
 
-                </li>
                 <li>
-                    <span class="student_id"></span>
-                    <span class="student_name">Marek Grzybek</span>
-                    <span class="student_wallet">100</span>
-
+                     <span class="student_id"> {{codecooler.ID }} </span>
+                     <span class="student_name"> {{codecooler.firstName}} {{codecooler.lastName}}</span>
+                     <span class="student_wallet"> piniążki </span>
                 </li>
+
+
+            {% endfor %}
             </ul>
+
             <input type="button" id="add_student_option" name="add_student_option" value="ADD STUDENT">
             <hr>
             <p>Enter student number to edit: </p>
@@ -117,7 +111,7 @@
     </div>
 
 </body>
-<script src="../js/script.js"></script>
-<script src="../js/codecoolers.js"></script>
+<script src="/static/js/script.js"></script>
+<script src="/static/js/codecoolers.js"></script>
 
 </html>
